[metadata]
name = pymarkdownlint
version = 0.1
summary = Markdown linter written in python. Inspired by mivok/markdownlint.
description =
    Markdown linter written in python. Under active development.
    Source code: https://github.com/jorisroovers/pymarkdownlint

author = Joris Roovers

[files]
packages =
    pymarkdownlint

[entry_points]
console_scripts =
    markdownlint = pymarkdownlint.cli:cli