[metadata]
name = pymarkdownlint
version = 0.2.0
summary = Markdown linter written in python. Under active development.
description =
    Markdown linter written in python. Under active development.
    Source code: https://github.com/jorisroovers/pymarkdownlint

home-page = https://github.com/jorisroovers/pymarkdownlint
author = Joris Roovers
classifier =
        Development Status :: 3 - Alpha
        Operating System :: OS Independent
        Programming Language :: Python
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License

[files]
packages =
    pymarkdownlint

[entry_points]
console_scripts =
    markdownlint = pymarkdownlint.cli:cli
